[tool.poetry]
name = "discord-bot-template"
version = "1.0.0"
description = ""
authors = ["Alex Oladele <dragid10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
discord-ext-ui = "^3.1.9"
loguru = "^0.6.0"
orjson = "^3.8.11"
py-cord = { extras = ["speed"], version = "^2.4.1" }
python-decouple = "^3.8"
python-dotenv = "^1.0.0"
requests = "^2.29.0"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"


[tool.poetry.group.test.dependencies]
mockito = "^1.4.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-mockito = "0.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
